<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center" 
    android:padding="25dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/id_label"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/id_label" />

        <EditText
            android:id="@+id/rider_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/id_hint" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/name_label"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/name_label" />

        <EditText
            android:id="@+id/rider_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name_hint"
            android:inputType="textPersonName" />

    </LinearLayout>
    
    <CheckBox 
        android:id="@+id/configure_write_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configure_write_only"
        android:visibility="gone" />
    
    <Button
        android:id="@+id/write_tag_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/write_a_new_tag"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:textSize="15sp"
        />
    
    <TextView 
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        />
</LinearLayout>